# lifegame

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Quest.cpp
